@@ -520,6 +520,11 @@ symlink_glx() {
 
     action indirect_size.c
     action indirect_size.h
+
+    src_dir src/mesa/drivers/dri/common
+
+    action glcontextmodes.c
+    action glcontextmodes.h
 }
 
 #########
